# Budget-app

./: README.md  esimerkki lotan.py
budget-app/: .env  .gitignore  pyproject.toml  tasks.py
budget-app/data/: t-database.sqlite
budget-app/dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje  kayttoohje.md  testausdok.md  tyoaikakirjanpito.md  vaatimusmaarittely.md
budget-app/src/: config.py  database_connection.py  index.py  initialize_database.py
budget-app/src/entities/: budget.py  expense.py  income.py  user.py
budget-app/src/repositories/: budget_repository.py  user_repository.py
budget-app/src/services/: budget_services.py
budget-app/src/tests/: repositories_test.py  tests.py  user_repository_test.py
budget-app/src/ui/: budget_new_expense_view-1.py  budget_new_expense_view.py  budget_start_view.py  creating_user_view.py  logging_in_view.py  ui.py
budjet-app/: .env  .env.test  .gitignore  pyproject.toml
budjet-app/data/: database.sqlite
budjet-app/dokumentaatio/: changelog.md  tyoaikakirjanpito.md
budjet-app/src/: build.py  config.py  database_connection.py  example.py  initialize_database.py
budjet-app/src/entities/: user.py
budjet-app/src/repositories/: user_repository.py
budjet-app/src/services/: budget_services.py  budjet_services.py
budjet-app/src/tests/: user_repository_test.py
budjet-app/src/ui/: budjet_start_view.py  creating_user_view.py  logging_in_view.py  ui.py
dokumentaatio/: vaatimusmaarittely.md
laskarit/viikko1/: README.md  gitlog.txt
laskarit/viikko3/: Monopoly-luokkakaavio  monopoly.drawio.html
(+4 files in other folders)
