[tool.poetry]
name = "budjet-app"
version = "0.1.0"
description = ""
authors = ["Sanni Tuomisto <sanni.tuomisto@helsinki.fi>"]

[tool.poetry.dependencies]
python = "^3.8"
python-dotenv = "^0.20.0"
invoke = "^1.7.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
pytest-dotenv = "^0.5.2"
pylint = "^2.13.5"
autopep8 = "^1.6.0"
coverage = "^6.3.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
